# swagger_server/controllers/default_controller.py
@@ -55,3 +55,18 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     return 'Not Found', 404
 
 
+def get_student_by_last_name(last_name=None):  # noqa: E501
+    """Find student by last name
+
+    Returns a single student # noqa: E501
+
+    :param last_name: last na,e of student to return
+    :type last_name: str
+
+    :rtype: Student
+    """
+    res = student_service.get_student_by_last_name(last_name=last_name)
+    if res:
+        return res
+    return 'Not Found', 404
+
