# swagger_server/swagger/swagger.yaml
@@ -9,6 +9,32 @@ schemes:
 - "http"
 paths:
   /student:
+    get:
+      summary: "Get a student by last_name"
+      description: ""
+      operationId: "get_student_by_last_name"
+      consumes:
+      - "application/json"
+      - "application/xml"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "last_name"
+        in: "query"
+        description: "last name of student to return"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Student"
+        "400":
+          description: "Invalid last name supplied"
+        "404":
+          description: "student not found"
+      x-swagger-router-controller: "swagger_server.controllers.default_controller"
     post:
       summary: "Add a new student"
       description: ""
